--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -34,6 +34,8 @@
                 </div>
             </div>
         </div>
+        <div class="inner 3d-hover" style="transform: rotateY(3.8006230529595015deg) rotateX(0deg);-webkit-transform: rotateY(3.8006230529595015deg) rotateX(0deg);-moz-transform: rotateY(3.8006230529595015deg) rotateX(0deg)">  
+        </div>
         <!-- preloader end -->
         <!-- logo start -->
         <a class="logo" href="#">
